--- a/quiz.html
+++ b/quiz.html
@@ -1,16 +1,23 @@
 <head>
 <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:400,700" rel="stylesheet">
 <link href='style.css' rel='stylesheet' type='text/css'>
-<title>Good test</title>
+<title>8values Quiz</title>
 <link rel="icon" type="x-icon" href="icon.png">
 <link rel="shortcut icon" type="x-icon" href="icon.png">
 <meta charset="utf-8">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-6511426299019766",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body>
 <script type="application/javascript"
         src="questions.js">
 </script>
-<h1>Good test</h1>
+<h1>8values</h1>
 <hr>
 <h2 style="text-align:center;" id="question-number">Loading...</h2>
 <p class="question" id="question-text"></p>
@@ -21,6 +28,24 @@
 <button class="button" onclick="next_question(-1.0)" style="background-color: #b71c1c;">Strongly Disagree</button> <br>
 <button class="small_button" onclick="prev_question()" id="back_button">Back</button>
 <button class="small_button_off" id="back_button_off">Back</button><br>
+
+<!-- Website visit statistics - no personal information is collected! -->
+<script type="text/javascript">
+var sc_project=11325211;
+var sc_invisible=1;
+var sc_security="fd9f0659";
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="web stats"
+href="http://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="//c.statcounter.com/11325211/0/fd9f0659/1/" alt="web
+stats"></a></div></noscript>
+
 <!-- JavaScript for the test itself -->
 <script>
     var max_econ, max_dipl, max_govt, max_scty; // Max possible scores
@@ -30,18 +55,12 @@
     var qn = 0; // Question number
     var prev_answer = null;
     init_question();
-    for (var i = 0; i < questions.length; i++) {
-        max_econ += Math.abs(questions[i].effect.econ)
-        max_dipl += Math.abs(questions[i].effect.dipl)
-        max_govt += Math.abs(questions[i].effect.govt)
-        max_scty += Math.abs(questions[i].effect.scty)
-    }
     function init_question() {
         document.getElementById("question-text").innerHTML = questions[qn].question;
         document.getElementById("question-number").innerHTML = "Question " + (qn + 1) + " of " + (questions.length);
         if (prev_answer == null) {
             document.getElementById("back_button").style.display = 'none';
-            document.getElementById("back_button_off").style.display = 'none';
+            document.getElementById("back_button_off").style.display = 'block';
         } else {
             document.getElementById("back_button").style.display = 'block';
             document.getElementById("back_button_off").style.display = 'none';
@@ -54,6 +73,10 @@
         dipl += mult*questions[qn].effect.dipl
         govt += mult*questions[qn].effect.govt
         scty += mult*questions[qn].effect.scty
+            max_econ += Math.abs(mult*questions[qn].effect.econ)
+            max_dipl += Math.abs(mult*questions[qn].effect.dipl)
+            max_govt += Math.abs(mult*questions[qn].effect.govt)
+            max_scty += Math.abs(mult*questions[qn].effect.scty)
         qn++;
         prev_answer = mult;
         if (qn < questions.length) {
@@ -76,14 +99,14 @@
 
     }
     function calc_score(score,max) {
-        return (100*(max+score)/(2*max)).toFixed(1)
+        return (100*((score+max)/max/2)).toFixed(1)
     }
     function results() {
         location.href = `results.html`
-            + `?e=${calc_score(econ,max_econ)}`
-            + `&d=${calc_score(dipl,max_dipl)}`
-            + `&g=${calc_score(govt,max_govt)}`
-            + `&s=${calc_score(scty,max_scty)}`
+            + `?e=${calc_score(econ,max_econ+0.000001)}`
+            + `&d=${calc_score(dipl,max_dipl+0.000001)}`
+            + `&g=${calc_score(govt,max_govt+0.000001)}`
+            + `&s=${calc_score(scty,max_scty+0.000001)}`
     }
 </script>
 </body>
