--- a/decimaltime.html
+++ b/decimaltime.html
@@ -60,6 +60,6 @@ document.getElementById("weekday").innerHTML = "Baday"
 }
 window.setInterval("updateClock()", 1);
 </script>
-<br/><br/><font size ="1">Thanks to <a href="https://www.youtube.com/channel/UCIwJaHUMQJopu5h-nI09JgA" target="tab">vasker</a> for the weekday names!</font>
+<br/><br/><font size ="1">Let it be k-nown that I was not fully responsible for the creation of these names.</font>
 </body>
 </html>
