--- a/decimaltime.html
+++ b/decimaltime.html
@@ -18,9 +18,9 @@ ms = date.getMilliseconds()
 seconds = (Date.parse(Date())/1000) - 1489276800
 document.getElementById("demo").innerHTML = pad(Math.floor(seconds / 86400000),4)
 year = Math.floor(seconds / 86400000)*86400000
-document.getElementById("demo2").innerHTML = Math.floor((seconds - year) / 864000)
+document.getElementById("demo2").innerHTML = pad(Math.floor((seconds - year) / 864000),2)
 month = Math.floor((seconds - year) / 864000)*864000
-document.getElementById("demo3").innerHTML = pad(Math.floor((seconds - year - month) / 86400),2)
+document.getElementById("demo3").innerHTML = Math.floor((seconds - year - month) / 86400)
 day = Math.floor((seconds - year - month) / 86400)*86400
 document.getElementById("demo4").innerHTML = Math.floor((seconds - year - month - day) / 8640)
 hour = Math.floor((seconds - year - month - day) / 8640)*8640
