--- a/decimaltime.html
+++ b/decimaltime.html
@@ -38,10 +38,10 @@ if (weekdayc.toString().slice(-1) == 2){
 document.getElementById("weekday").innerHTML = "Hugday"
 }
 if (weekdayc.toString().slice(-1) == 3){
-document.getElementById("weekday").innerHTML = "Yeday"
+document.getElementById("weekday").innerHTML = "Freeday"
 }
 if (weekdayc.toString().slice(-1) == 4){
-document.getElementById("weekday").innerHTML = "Sillyday"
+document.getElementById("weekday").innerHTML = "Sansday"
 }
 if (weekdayc.toString().slice(-1) == 5){
 document.getElementById("weekday").innerHTML = "Anarchyday"
