--- a/decimaltime.html
+++ b/decimaltime.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<span style="font-size: 2.75vw; color: #00FF00;"><span id="weekday"></span>, <span id="demo"></span>/<span id="demo2">/</span>/<span id="demo3"></span> <span id="demo4"></span>:<span id="demo5"></span>:<span id="demo6"></span>:<span id="demo7"></span> </span><font style="font-size:1vw">Note: Time may vary in accuracy due to dependence on the computer's local clock.</font><br/>
-<h1>Format: Weekday, Years/Month/Day Hours:Minutes:Seconds:Milliseconds</h1>
-<h2>There are 10 months in a year, 10 days in a month, 10 hours in a day, 100 minutes in an hour, 100 seconds in a minute and 1000 milliseconds in a second.</h2><h3>A day is the approximate amount of time it takes for the Earth to complete a full rotation in respect to the Sun.</h3>
+<span style="font-size: 2.75vw; color: #00FF00;" id="gtext"><span id="weekday"></span>, <span id="demo"></span>/<span id="demo2">/</span>/<span id="demo3"></span> <span id="demo4"></span>:<span id="demo5"></span>:<span id="demo6"></span>:<span id="demo7"></span> </span><font style="font-size:1vw">Note: Time may vary in accuracy due to dependence on the computer's local clock.</font><br/>
+<span id="btext"><h1>Format: Weekday, Years/Month/Day Hours:Minutes:Seconds:Milliseconds</h1>
+<h2>There are 10 months in a year, 10 days in a month, 10 hours in a day, 100 minutes in an hour, 100 seconds in a minute and 1000 milliseconds in a second.</h2><h3>A day is the approximate amount of time it takes for the Earth to complete a full rotation in respect to the Sun.</h3></span><br/><br/><span><a id="switch" href="javascript:dark()">Go dark</a>
 
 <script>
 function pad(n, width, z) {
@@ -62,7 +62,21 @@ document.getElementById("weekday").innerHTML = "Loveday"
 }
 }
 window.setInterval("updateClock()", 1);
+function darktheme()
+{
+document.body.style.backgroundColor = "black";
+document.getElementById("gtext").style.color = "cyan";
+document.getElementById("btext").style.color = "purple";
+document.getElementById("btext2").style.color = "purple";
+}
+function dark()
+{
+darktheme()
+document.getElementById("switch").href = "javascript:location.reload()"
+document.getElementById("switch").innerHTML = "Go light"
+document.getElementById("switch").style.color = "white"
+}
 </script>
-<br/><br/><font size ="1">Let it be k-nown that I was not fully responsible for the creation of these names.</font>
+<br/><br/><span id="btext2"><font size ="1">Let it be k-nown that I was not fully responsible for the creation of these names.</font></span>
 </body>
 </html>
