--- a/decimaltime.html
+++ b/decimaltime.html
@@ -53,7 +53,7 @@ function hou2imp(valNum) {
   document.getElementById("outputhoui").innerHTML=Math.round((valNum*2.4)*100)/100;
 }
 </script><br/>
-Decimal days = Earth days. Do you really need a converter for that?</br>
+1 decimal day = 1 Earth day. Do you really need a converter for that?</br>
 Earth years to decimal:  <input id="inputyeai" type="number" oninput="yea2dec(this.value)" onchange="yea2dec(this.value)">
 <span id="outputyead"></span>
 
