--- a/decimaltime.html
+++ b/decimaltime.html
@@ -105,7 +105,8 @@ Can I copy the system/code/anything from this page?
 </br>
 Do you still love me when it's not Loveday and will you hug me when it's not Hugday?
 </br></br>
-<blockquote>Of course, I love you infinitely all days and I'll hug you any time, my friend.</blockquote></span>
+<blockquote>Of course, I love you infinitely all days and I'll hug you any time, my friend.</blockquote>
+<br/>Still got questions? Email me at <a href="mailto:brmbrmcar.1.4913@gmail.com">brmbrmcar.1.4913@gmail.com</a> and I'll answer as soon as I can.</span>
 
 </span><br/><br/><span id="hidecookie"><a id="switch" href="javascript:dark()">Go dark</a> <a href="javascript:rememberdark()">Always use dark theme (extremely small cookie)</a> </span><a id="delete" style="visibility:hidden" href="javascript:eraseCookie()">Delete dark theme cookie</a>
 
