--- a/decimaltime.html
+++ b/decimaltime.html
@@ -106,7 +106,7 @@ Can I copy the system/code/anything from this page?
 Do you still love me when it's not Loveday and will you hug me when it's not Hugday?
 </br></br>
 <blockquote>Of course, I love you infinitely all days and I'll hug you any time, my friend.</blockquote>
-<br/>Still got questions? Email me at <a href="mailto:brmbrmcar.1.4913@gmail.com">brmbrmcar.1.4913@gmail.com</a> and I'll answer as soon as I can.</span>
+<br/>Still got questions? Email me at <a href="mailto:brmbrmcar.1.4913@gmail.com">brmbrmcar.1.4913@gmail.com</a> and I'll answer as soon as I can. If you prefer, you can message me through <a href="https://www.youtube.com/brmbrmcar/about">https://www.youtube.com/brmbrmcar/about</a> which will probably result in a very slow response or you can message through Discord (probably the quickest method) by joining <a href="https://discordapp.com/invite/2k6NAzu">https://discordapp.com/invite/2k6NAzu</a>, if you want to talk in direct messages my id is 226602566912442370 but the guild (server) is also fine to ask in.</span>
 
 </span><br/><br/><span id="hidecookie"><a id="switch" href="javascript:dark()">Go dark</a> <a href="javascript:rememberdark()">Always use dark theme (extremely small cookie)</a> </span><a id="delete" style="visibility:hidden" href="javascript:eraseCookie()">Delete dark theme cookie</a>
 
