--- a/decimaltime.html
+++ b/decimaltime.html
@@ -79,13 +79,17 @@ Why do the units share the same name as imperial units?
 </br></br>
 <blockquote>Look at the day names. I'm not that inventive.</blockquote>
 </br>
+Why are there no month names?
+</br></br>
+<blockquote>Again, I'm not that inventive.</blockquote>
+</br>
 How many weeks are in a month?
 </br></br>
 <blockquote>1. They're the same.</blockquote>
 </br>
 Why is there no converter for weeks/months?
 </br></br>
-<blockquote>People don't tend to meaure time by measure of imperial weeks, and imperial months change so much and the change is based on literally nothing.</blockquote>
+<blockquote>People don't tend to measure time by measure of imperial weeks, and imperial months change so much and the change is based on literally nothing.</blockquote>
 </br>
 What are the weekday names?
 </br></br>
