--- a/dangerleccy.html
+++ b/dangerleccy.html
@@ -13,7 +13,7 @@ The significant figures are the amount of significant figures that the input pot
 <br/><br/>
 To calculate a new dangerous level set, click <a href="javascript:location.reload()">here</a>. I need to fix this, as well as a load of other things.
 <br/><br/>
-As a general note, the watts can be used as a test if anything has not calculated correctly, as then it is often above the input. In most cases, the power will be similar input and output because there is just enough potential difference to push the current through.
+As a general note, the watts can be used as a test if anything has not calculated to a high level of precision, as then it is often above the input. In most cases, the power will be similar input and output because there is just enough potential difference to push the current through.
 <br/><br/><br/>
 
 Resistance (Ohms): <input type="number" id="resin" value="289" onclick="check()" onchange="check()">
