--- a/dangerleccy.html
+++ b/dangerleccy.html
@@ -3,67 +3,65 @@ This calculator will work out the most dangerous possible input current/potentia
 <br/><br/>
 For any of the values, do not enter 0 or anything that is not a number as I might just hit you with one of these dangerous combinations if you do as much. I also apologise that the units are imperial; I have yet to produce decimal alternatives.
 <br/><br/>
-Resistance is measured in ohms. As a reference, the human body can have a resistance of anywhere from 100Ω on the tongue up to 100000Ω on dry skin. The higher the value, the quicker the calculation is likely to be.
+Resistance is measured in ohms. As a reference, the human body can have a resistance of anywhere from 100Ω on the tongue up to 100000Ω on dry skin.
 <br/><br/>
-Power is measured in watts (joules per imperial second). The higher the value, the longer the calculation is likely to take.
+Power is measured in watts (joules per imperial second).
 <br/><br/>
-The precision is how many values that will be checked. 10000000 is the recommended value, and going below 1000000 is not recommended. The greater the precision, the longer the calculation is likely to take.
+The significant figures are the amount of significant figures that the input potential difference and current and the output current, power and potential difference will be displayed to. Going above 20 may cause issues.
 <br/><br/>
-The significant figures are the amount of significant figures that the input potential difference and current and the output current, power and potential difference will be displayed to. Going above 20 may cause issues. This should not impact speed of the calculation.
-<br/><br/>
-To calculate a new dangerous level set, click <a href="javascript:location.reload()">here</a>. I need to fix this, as well as a load of other things.
-<br/><br/>
-In most cases, the power will be similar input and output because there is just enough potential difference to push the current through. If the output is higher than the input then you can hit me with the power you put into it, unless you put in a negative number or something.
+In most cases, the power will be identical input and output because there is just enough potential difference to push the current through. If the output is higher than the input then you can hit me with the power you put into it, unless you put in a negative number or something.
 <br/><br/><br/>
 
 Resistance (Ohms): <input type="number" id="resin" value="289" onclick="check()" onchange="check()">
 Power (Watts): <input type="number" id="powin" value="4913" onclick="check()" onchange="check()">
-Precision: <input type="number" id="prein" value="10000000" onclick="check()" onchange="check()">
 Significant figures: <input type="number" id="sigin" value="5" onclick="check()" onchange="check()"> <button onclick="calcdanger()">CALCULATE MOST DANGEROUS CURRENT AND POTENTIAL DIFFERENCE LEVELS</button>
 <span id="current"></span><span id="pot"></span><span id="output"></span><span id="output2"></span><span id="output3"></span><span id="count"></span>
+
+
+<br/><br/><br/>
+Maximum resistance for specific current/potential difference:
+<br/><br/>
+This equally badly designed calculator will work out the maximum resistance for a specific current/potential difference.
+<br/><br/><br/>
+Current (Amperes): <input type="number" id="curin17" value="289" onclick="check()" onchange="check()">
+Potential difference (Volts): <input type="number" id="potin17" value="4913" onclick="check()" onchange="check()">
+Significant figures: <input type="number" id="sigin17" value="5" onclick="check()" onchange="check()"> <button onclick="calcmaxres()">CALCULATE MAXIMUM RESISTANCE FOR THE CURRENT AND POTENTIAL DIFFERENCE LEVELS</button>
+<span id="resout17"></span>
 <script>
-accuracy = parseFloat(document.getElementById("prein").value);
 current2 = 1
+cur17 = parseFloat(document.getElementById("curin17").value);
+pot17 = parseFloat(document.getElementById("potin17").value);
+prec17 = parseFloat(document.getElementById("sigin17").value);
 res = parseFloat(document.getElementById("resin").value);
 power = parseFloat(document.getElementById("powin").value);
 prec = parseFloat(document.getElementById("sigin").value);
 function check() {
-accuracy = parseFloat(document.getElementById("prein").value);
 res = parseFloat(document.getElementById("resin").value);
 power = parseFloat(document.getElementById("powin").value);
 prec = parseFloat(document.getElementById("sigin").value);
+cur17 = parseFloat(document.getElementById("curin17").value);
+pot17 = parseFloat(document.getElementById("potin17").value);
+prec17 = parseFloat(document.getElementById("sigin17").value);
+
 }
-current = power/accuracy
 high = 0
 high2 = 0
 high1 = 0
 high3 = 0
 high4 = 0
 now = 0
+current = 0
 function calcdanger() {
-	var lop = setInterval( function() { 
-	pot = power/current
-	current2 = pot/res
-	if (current>=current2){
+	current2 = Math.sqrt(power/res) //4.123105626
+	pot = power/current2 //1191.577525804
 	now = current2
-	}
-	if (current<current2){
-	now = current
-	}
-	if (now>high){
 	high = now
 	high1 = pot
-	high2 = current
+	high2 = current2
         high3 = Math.pow(now,2)*res
         high4 = high3/now
-	}
-	current = current+(power/accuracy)
-	document.getElementById("count").innerHTML=Math.floor(((current-(power/accuracy))/current2)*10000)/100 + "% calculated"
-	if (current2<=current-(power/accuracy)){
+//	document.getElementById("count").innerHTML=Math.floor(((current-(power/accuracy))/current2)*10000)/100 + "% calculated"
 	dangerout()
-	clearInterval(lop)
-	}
-	}, 1);
 }
 function dangerout(){
 document.getElementById("current").innerHTML=high2.toPrecision(prec) + " amperes and "
@@ -72,6 +70,10 @@ document.getElementById("output").innerHTML=high.toPrecision(prec) + " amperes, 
 document.getElementById("output2").innerHTML=high3.toPrecision(prec) + " watts and "
 document.getElementById("output3").innerHTML=high4.toPrecision(prec) + " volts. "
 document.getElementById("count").innerHTML=""
+}
+function calcmaxres(){
+out17 = (pot17*cur17)/Math.pow(cur17,2)
+document.getElementById("resout17").innerHTML=out17.toPrecision(prec17) + " ohms is the maximum resistance."
 }
 </script>
 </body></html>
