--- a/dangerleccy.html
+++ b/dangerleccy.html
@@ -37,7 +37,7 @@ This third badly designed calculator will work out the output current, potential
 Current (Amperes): <input type="number" id="curin289" value="289" onclick="check()" onchange="check()">
 Potential difference (Volts): <input type="number" id="potin289" value="4913" onclick="check()" onchange="check()">
 Resistance (Ohms): <input type="number" id="resin289" value="17" onclick="check()" onchange="check()">
-Significant figures: <input type="number" id="sigin289" value="5" onclick="check()" onchange="check()"> <button onclick="calcaftres()">CALCULATE MAXIMUM RESISTANCE FOR THE CURRENT AND POTENTIAL DIFFERENCE LEVELS</button>
+Significant figures: <input type="number" id="sigin289" value="5" onclick="check()" onchange="check()"> <button onclick="calcaftres()">CALCULATE OUTPUT CURRENT AND POTENTIAL DIFFERENCE</button>
 <span id="curout289"></span><span id="potout289"></span><span id="powout289"></span><br/><br/><span id="hidecookie"><a id="switch" href="javascript:dark()">Go dark</a> <a href="javascript:rememberdark()">Always use dark theme (extremely small cookie)</a> </span><a id="delete" style="visibility:hidden" href="javascript:eraseCookie()">Delete dark theme cookie</a>
 <script>
 current2 = 1
