--- a/dangerleccy.html
+++ b/dangerleccy.html
@@ -26,8 +26,7 @@ This equally badly designed calculator will work out the maximum resistance for 
 Current (Amperes): <input type="number" id="curin17" value="289" onclick="check()" onchange="check()">
 Potential difference (Volts): <input type="number" id="potin17" value="4913" onclick="check()" onchange="check()">
 Significant figures: <input type="number" id="sigin17" value="5" onclick="check()" onchange="check()"> <button onclick="calcmaxres()">CALCULATE MAXIMUM RESISTANCE FOR THE CURRENT AND POTENTIAL DIFFERENCE LEVELS</button>
-<span id="resout17"></span><br/><br/><span id="hidecookie"><a id="switch" href="javascript:dark()">Go dark</a> <a href="javascript:rememberdark()">Always use dark theme (extremely small cookie)</a> </span><a id="delete" style="visibility:hidden" href="javascript:eraseCookie()">Delete dark theme cookie</a>
-
+<span id="resout17"></span>
 
 <br/><br/><br/>
 Current/potential difference after passing through a resistance:
